# hack-n-slash-Game

./: CMakeLists.txt
src/: animation.c  animation.h  asset.c  asset.h  game.c  game.h  main.c  map.c  map.h  menu.c  menu.h  state.c  state.h  window.c  window.h
src/assets/map/: dungeon tileset.tsx  map1.tmx
src/entities/: ecs.c  ecs.h  player.c  player.h
src/physics/: collision.c  collision.h  physics.c  physics.h
